[package]
name = "roguelike-tutorial"
version = "0.1.0"
authors = ["liuweihu <6460176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
specs = "0.16.1"
specs-derive = "0.4.1"


[workspace]
members = [
    "chapter-01-hellorust",
    "chapter-02-helloecs",
    "chapter-03-walkmap",
    "chapter-04-newmap",
]